Update the simple-foregin project so it can be built into a native image.