@@ -13,7 +13,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.release>23</maven.compiler.release>
+    <maven.compiler.release>24</maven.compiler.release>
   </properties>
 
   <dependencyManagement>
@@ -42,4 +42,48 @@
     </dependency>
   </dependencies>
 
+  <profiles>
+    <profile>
+      <id>native</id>
+      <activation>
+        <property>
+          <name>native</name>
+        </property>
+      </activation>
+
+      <dependencies>
+<!-- https://mvnrepository.com/artifact/org.graalvm.nativeimage/library-support -->
+<dependency>
+    <groupId>org.graalvm.nativeimage</groupId>
+    <artifactId>library-support</artifactId>
+    <version>24.2.2</version>
+    <scope>provided</scope>
+</dependency>
+      </dependencies>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.graalvm.buildtools</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+            <version>0.10.6</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>build</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <mainClass>dev.lofthouse.App</mainClass>
+              <buildArgs>
+                <buildArg>--enable-native-access</buildArg>
+                <buildArg>ALL-UNNAMED</buildArg>
+              </buildArgs>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
